--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -6,11 +6,12 @@
         <!-- 
             [class.selected] - Adiciona a classe ".selected" caso o heroi selecionado seja o mesmo do cliacado
          -->
-        <button type="button" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+        <!--   DEAD CODE - Mantido para fins de consulta
+            <a routerLink="/detail/{{hero.id}}" [class.selected]="hero === selectedHero" (click)="onSelect(hero)"> 
+                -->
+        <a routerLink="/detail/{{hero.id}}">
             <span class="badge">{{hero.id}}</span>
             <span class="name">{{hero.name}}</span>
-        </button>
+        </a>
     </li>
 </ul>
-
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
