--- a/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -5,5 +5,6 @@
         <label for="hero-name">Hero name: </label>
         <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" maxlength="20" type="text">
     </div>
+    <button type="button" (click)="save()">Save</button>
     <button type="button" (click)="goBack()">Go back</button>
 </div>
