metodo delete implementado

--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -13,7 +13,10 @@
             <span class="badge">{{hero.id}}</span>
             <span class="name">{{hero.name}}</span>
         </a>
+        <button type="button" class="delete" title="delete hero" (click)="delete(hero)">X</button>
     </li>
+
+
 </ul>
 
 <!-- Criar novo herói -->
