--- a/angular-tour-of-heroes/src/app/hero-search/hero-search.component.html
+++ b/angular-tour-of-heroes/src/app/hero-search/hero-search.component.html
@@ -5,6 +5,11 @@
     <input #searchBox id="search-box" (input)="search(searchBox.value)">
 
     <ul class="search-result">
+
+        <!-- 
+             $ - Indica que heroes é um observable, não um arr
+             | async - Indica ao angular um async pipe, sobrescreve em observable automaticamente
+         -->
         <li *ngFor="let hero of heroes$ | async" >
             <a routerLink="/detail/{{hero.id}}">
                 {{hero.name}}
